[package]
name = "k8s-controller"
version = "0.1.0"
authors = ["Nick Brandaleone <nbrand@mac.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = "0.24.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "0.2", features = ["full"] }
anyhow = "1.0"
futures = "0.3.1"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
simple_logger = "1.5.0"
